rtl alignment issues fixes
Bug IDs :
11937
11925
11930
11945
11998
11957
11963
11954
12083

--- a/public/src/module/_canned-response.scss
+++ b/public/src/module/_canned-response.scss
@@ -753,6 +753,9 @@ height: auto;
 .canned_create_folder{
 	height: 40px;
 	overflow: hidden;
+	.controls{
+		@include margin-left(160px);
+	}
 }
 
 .ca-response-move-options {
